# tiny-tsx

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
src/: types.d.ts
src/macro-rs/: lib.rs
src/macro-ts/: index.ts
src/parser/: index.ts
src/parser/enums/: language.ts
src/parser/functions/: build-rust-function.ts  build-typescript-function.ts  build.ts  generate-rust-modules.ts
src/parser/functions/content/: parse-array-element.ts  parse-array-expression.ts  parse-binary-child-expression.ts  parse-binary-expression.ts  parse-body-expression.ts  parse-call-expression-macro-join.ts  parse-call-expression-macro-json.ts  parse-call-expression-macro-map.ts  parse-call-expression-macro-quot.ts  parse-call-expression.ts  parse-identifier.ts  parse-jsx-attribute-name.ts  parse-jsx-attribute-value-expression.ts  parse-jsx-attribute-value.ts  parse-jsx-attribute.ts  parse-jsx-child-expression.ts  parse-jsx-child.ts  parse-jsx-element-name.ts  parse-jsx-element.ts  parse-jsx-fragment.ts  parse-jsx-text.ts  parse-member-expression.ts  parse-object-expression.ts  parse-object-property-key.ts  parse-object-property-value.ts  parse-object-property.ts  parse-template-literal-expression.ts  parse-template-literal.ts
src/parser/functions/param/: parse-arrow-function-param-type.ts  parse-arrow-function-param.ts
src/parser/functions/struct/: parse-interface-body.ts  parse-interface-declaration.ts  parse-interface-deriveds.ts  parse-property-key.ts  parse-type-element.ts  parse-type-reference-name.ts  (+1 more)
src/parser/types/: config.ts  content.ts  param.ts  struct.ts
