[package]
name = "tiny-tsx"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiny_tsx"
path = "src/macro-rs/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"